--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -44,6 +44,7 @@ requirements:
     - onednn                                 # [build_platform != target_platform]
     - onednn-cpu-threadpool                  # [build_platform != target_platform]
     - pybind11                               # [build_platform != target_platform]
+    - llvm-for-tensorflow {{ tf_llvm_version }}  # [build_platform != target_platform]
     - numpy 1.20.*  # [py<310 and (build_platform != target_platform)]
     - numpy 1.21.*  # [py>=310 and (build_platform != target_platform)]
     - {{ compiler('c') }}
