--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,8 +1,15 @@
 # 2021/12/05 hmaarrfk
 # Tensorflow 2.7.0 requires futimens which is only
 # available on 10.13
+# 2022/06/21 ngam
+# trying 10.14 to fix some clang issues
 MACOSX_SDK_VERSION:        # [osx and x86_64]
-  - "10.13"                # [osx and x86_64]
+  - "10.14"                # [osx and x86_64]
+c_compiler_version:        # [osx]
+  - 11                     # [osx]
+cxx_compiler_version:      # [osx]
+  - 11                     # [osx]
+
 # c_compiler_version:        # [linux]
 #   - 9                      # [linux]
 #   - 7                      # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux64]
