--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,6 +10,9 @@ source:
     sha256: 6eaf86ead73e23988fe192da1db68f4d3828bcdd0f3a9dc195935e339c95dbdc
     patches:
       - patches/0001-loosen-requirements.patch
+      # the following patch disables some absl utils from being used
+      # in xla contexts; refer to issue for more info
+      # https://github.com/conda-forge/tensorflow-feedstock/issues/256
       - patches/0001-disable-using-diagnose_if.patch
 
   - url: https://github.com/tensorflow/estimator/archive/refs/tags/v{{ estimator_version }}.tar.gz
