try fix in https://github.com/tensorflow/tensorflow/commit/bc4521dd193290f86bd5de8a56cefbcbfeae3213

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,8 +23,7 @@ build:
   # Tensorflow still hasn't updated from C++14.
   # Newer versions of abseil_cpp require C++17
   # This may be a possibility in 2.9.0
-  skip: true  # [abseil_cpp != '20211102.0' and not osx]
-  skip: true  # [abseil_cpp != '20210324.2' and osx]
+  skip: true  # [abseil_cpp != '20211102.0']
 
 requirements:
   build:
