--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,9 +21,7 @@ build:
   number: 0
   skip: true  # [win]
   skip: true  # [python_impl == 'pypy']
-  # Tensorflow still hasn't updated from C++14.
-  # Newer versions of abseil_cpp require C++17
-  # This may be a possibility in 2.9.0
+  # We specify a version of abseil_cpp that is compatible with C++17
   skip: true  # [abseil_cpp != '20211102.0']
 
 requirements:
