use latest bazel
https://github.com/tensorflow/federated/commit/a9137a082c482af3ae8e35b10a12ea037f792a9f

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -42,7 +42,8 @@ requirements:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
     - {{ compiler('cuda') }}                 # [cuda_compiler_version != "None"]
-    - bazel 4.2.2
+    - bazel >=5.2.0
+
     - grpc-cpp
     - libprotobuf
     - nasm
@@ -270,7 +271,8 @@ outputs:
         # decide on the cuda variant
         # https://github.com/conda-forge/tensorflow-feedstock/issues/162
         - {{ compiler('cuda') }}                 # [cuda_compiler_version != "None"]
-        - bazel 4.2.2
+        - bazel >=5.2.0
+
       host:
         - python
         - pip
