--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,9 +1,10 @@
 # 2021/12/05 hmaarrfk
 # Tensorflow 2.7.0 requires futimens which is only
 # available on 10.13
+MACOSX_DEPLOYMENT_TARGET:  # [osx and x86_64]
+  - "10.13"                # [osx and x86_64]
 MACOSX_SDK_VERSION:        # [osx and x86_64]
   - "10.13"                # [osx and x86_64]
-
 # c_compiler_version:        # [linux]
 #   - 9                      # [linux]
 #   - 7                      # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux64]
