--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -218,6 +218,7 @@ outputs:
         - keras >=2.9,<2.10
         # avoid that people without GPUs needlessly download ~0.5-1GB
         - __cuda  # [cuda_compiler_version != "None"]
+        - __osx >={{ MACOSX_DEPLOYMENT_TARGET|default("10.9") }}  # [osx and x86_64]
     # TODO: decide on the name of the package
     # run_constrained:
     #   What is the difference between these two packages?
