--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
-{% set version = "2.10.0.rc0" %}
-{% set estimator_version = "2.10.rc0" %}
+{% set version = "2.10.0" %}
+{% set estimator_version = "2.10" %}
 
 package:
   name: tensorflow-split
@@ -7,13 +7,13 @@ package:
 
 source:
   - url: https://github.com/tensorflow/tensorflow/archive/refs/tags/v{{ version.replace(".rc", "-rc") }}.tar.gz
-    sha256: 3bac161442497c1ad5fd44ee7084064c0f5aab2cceb53a34c9345eaaa326a618
+    sha256: b5a1bb04c84b6fe1538377e5a1f649bb5d5f0b2e3625a3c526ff3a8af88633e8
     patches:
       - patches/0001-loosen-requirements.patch
 
 
   - url: https://github.com/tensorflow/estimator/archive/refs/tags/v{{ estimator_version.replace(".rc", "-rc") }}.tar.gz
-    sha256: 795449159215969afd1c2325203bfba72d44d2baf2f28eda9cccc2ad2be29a32
+    sha256: 60df309377cf4e584ca20198f9639beb685d50616395f50770fc0999092d6d85
     folder: tensorflow-estimator
 
 build:
@@ -113,8 +113,8 @@ requirements:
     - typing_extensions >=3.6.6
     - wrapt >=1.11.0
     # TF-API needs to move in sync
-    - tensorboard >=2.9,<2.10
-    - keras >=2.9,<2.10
+    - tensorboard >=2.10,<2.11
+    - keras >=2.10,<2.11
 
 outputs:
   # 2021/12/29: hmaarrfk
@@ -190,8 +190,8 @@ outputs:
         - typing_extensions >=3.6.6
         - wrapt >=1.11.0
         # TF-API needs to move in sync
-        - tensorboard >=2.9,<2.10
-        - keras >=2.9,<2.10
+        - tensorboard >=2.10,<2.11
+        - keras >=2.10,<2.11
       run:
         - python
         - packaging
@@ -212,8 +212,8 @@ outputs:
         - typing_extensions >=3.6.6
         - wrapt >=1.11.0
         # TF-API needs to move in sync
-        - tensorboard >=2.9,<2.10
-        - keras >=2.9,<2.10
+        - tensorboard >=2.10,<2.11
+        - keras >=2.10,<2.11
         # avoid that people without GPUs needlessly download ~0.5-1GB
         - __cuda  # [cuda_compiler_version != "None"]
         - __osx >={{ MACOSX_DEPLOYMENT_TARGET|default("10.9") }}  # [osx and x86_64]
