--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,8 +38,7 @@ requirements:
     - onednn                                 # [build_platform != target_platform]
     - onednn-cpu-threadpool                  # [build_platform != target_platform]
     - pybind11                               # [build_platform != target_platform]
-    - numpy 1.20.*  # [py<310 and (build_platform != target_platform)]
-    - numpy 1.21.*  # [py>=310 and (build_platform != target_platform)]
+    - numpy                                  # [build_platform != target_platform]
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
     - {{ compiler('cuda') }}                 # [cuda_compiler_version != "None"]
@@ -104,8 +103,7 @@ requirements:
     - google-pasta >=0.1.1
     - h5py >=2.9.0
     - keras-preprocessing >=1.1.1
-    - numpy 1.20.*  # [py<310]
-    - numpy 1.21.*  # [py>=310]
+    - numpy
     - opt_einsum >=2.3.2
     - protobuf >=3.9.2
     - python-flatbuffers >=2
@@ -181,8 +179,7 @@ outputs:
         - google-pasta >=0.1.1
         - h5py >=2.9.0
         - keras-preprocessing >=1.1.1
-        - numpy 1.20.*  # [py<310]
-        - numpy 1.21.*  # [py>=310]
+        - numpy
         - opt_einsum >=2.3.2
         - protobuf >=3.9.2
         - python-flatbuffers >=2
