--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -204,7 +204,11 @@ outputs:
         - opt_einsum >=2.3.2
         - protobuf >=3.9.2
         - python-flatbuffers >=2
-        - flatbuffers >=2
+        # This can be removed once the dust settles after
+        # the run_export is added to the main and 2.x.x branch
+        # https://github.com/conda-forge/flatbuffers-feedstock/pull/35
+        # https://github.com/conda-forge/flatbuffers-feedstock/pull/36
+        - {{ pin_compatible('flatbuffers', max_pin='x.x') }}
         - six >=1.12
         - termcolor >=1.1.0
         - typing_extensions >=3.6.6
