--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -8,3 +8,7 @@ github:
   tooling_branch_name: main
 conda_build:
   pkg_format: '2'
+# https://github.com/conda-forge/conda-smithy/pull/1686
+remote_ci_setup:
+- py-lief=0.12.3
+- conda-forge-ci-setup=3
