--- a/.ci_support/linux_64_c_compiler_version11cuda_compiler_versionNonecudnnundefinedcxx_compiler_version11numpy1.21python3.10.____cpython.yaml
+++ b/.ci_support/linux_64_c_compiler_version11cuda_compiler_versionNonecudnnundefinedcxx_compiler_version11numpy1.21python3.10.____cpython.yaml
@@ -23,17 +23,17 @@ docker_image:
 giflib:
 - '5.2'
 grpc_cpp:
-- '1.51'
+- '1.52'
 icu:
 - '70'
-jpeg:
-- '9'
 libabseil:
-- '20220623.0'
+- '20230125'
 libcurl:
 - '7'
 libgrpc:
-- '1.51'
+- '1.52'
+libjpeg_turbo:
+- 2.1.5
 libpng:
 - '1.6'
 libprotobuf:
@@ -41,15 +41,15 @@ libprotobuf:
 nccl:
 - '2'
 numpy:
-- '1.20'
+- '1.21'
 openssl:
-- 1.1.1
+- '3'
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.9.* *_cpython
+- 3.10.* *_cpython
 python_impl:
 - cpython
 snappy:
