--- a/.ci_support/osx_64_numpy1.20python3.8.____cpython.yaml
+++ b/.ci_support/osx_64_numpy1.20python3.8.____cpython.yaml
@@ -19,17 +19,17 @@ cxx_compiler_version:
 giflib:
 - '5.2'
 grpc_cpp:
-- '1.51'
+- '1.52'
 icu:
 - '70'
-jpeg:
-- '9'
 libabseil:
-- '20220623.0'
+- '20230125'
 libcurl:
 - '7'
 libgrpc:
-- '1.51'
+- '1.52'
+libjpeg_turbo:
+- 2.1.5
 libpng:
 - '1.6'
 libprotobuf:
@@ -37,15 +37,15 @@ libprotobuf:
 macos_machine:
 - x86_64-apple-darwin13.4.0
 numpy:
-- '1.21'
+- '1.20'
 openssl:
-- 1.1.1
+- '3'
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.10.* *_cpython
+- 3.8.* *_cpython
 python_impl:
 - cpython
 snappy:
