--- a/.ci_support/osx_arm64_numpy1.20python3.9.____cpython.yaml
+++ b/.ci_support/osx_arm64_numpy1.20python3.9.____cpython.yaml
@@ -1,45 +1,39 @@
+MACOSX_DEPLOYMENT_TARGET:
+- '11.0'
 c_compiler:
-- gcc
+- clang
 c_compiler_version:
-- '10'
-cdt_name:
-- cos7
+- '14'
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
-cuda_compiler:
-- nvcc
 cuda_compiler_version:
-- '11.2'
-cudnn:
-- '8'
+- None
 cxx_compiler:
-- gxx
+- clangxx
 cxx_compiler_version:
-- '10'
-docker_image:
-- quay.io/condaforge/linux-anvil-cuda:11.2
+- '14'
 giflib:
 - '5.2'
 grpc_cpp:
-- '1.51'
+- '1.52'
 icu:
 - '70'
-jpeg:
-- '9'
 libabseil:
-- '20220623.0'
+- '20230125'
 libcurl:
 - '7'
 libgrpc:
-- '1.51'
+- '1.52'
+libjpeg_turbo:
+- 2.1.5
 libpng:
 - '1.6'
 libprotobuf:
 - '3.21'
-nccl:
-- '2'
+macos_machine:
+- arm64-apple-darwin20.0.0
 numpy:
 - '1.20'
 openssl:
@@ -57,14 +51,10 @@ snappy:
 sqlite:
 - '3'
 target_platform:
-- linux-64
+- osx-arm64
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
-  - cudnn
-  - cuda_compiler_version
-  - cdt_name
-  - docker_image
 - - python
   - numpy
   - python_impl
