--- a/.ci_support/linux_64_c_compiler_version11cuda_compiler_versionNonecxx_compiler_version11numpy1.20python3.9.____cpython.yaml
+++ b/.ci_support/linux_64_c_compiler_version11cuda_compiler_versionNonecxx_compiler_version11numpy1.20python3.9.____cpython.yaml
@@ -1,9 +1,9 @@
 c_compiler:
 - gcc
 c_compiler_version:
-- '10'
+- '11'
 cdt_name:
-- cos7
+- cos6
 channel_sources:
 - conda-forge
 channel_targets:
@@ -11,27 +11,27 @@ channel_targets:
 cuda_compiler:
 - nvcc
 cuda_compiler_version:
-- '11.2'
+- None
 cudnn:
-- '8'
+- undefined
 cxx_compiler:
 - gxx
 cxx_compiler_version:
-- '10'
+- '11'
 docker_image:
-- quay.io/condaforge/linux-anvil-cuda:11.2
+- quay.io/condaforge/linux-anvil-cos7-x86_64
 giflib:
 - '5.2'
 grpc_cpp:
-- '1.52'
+- '1.51'
 icu:
 - '70'
 libabseil:
-- '20230125'
+- '20220623.0'
 libcurl:
 - '7'
 libgrpc:
-- '1.52'
+- '1.51'
 libjpeg_turbo:
 - 2.1.5
 libpng:
