--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -278,6 +278,9 @@ outputs:
         - bazel >=5.2.0,<6
         - python                                   # [build_platform != target_platform]
         - cross-python_{{ target_platform }}       # [build_platform != target_platform]
+        - libabseil                                # [build_platform != target_platform]
+        - libgrpc                                  # [build_platform != target_platform]
+        - icu                                      # [build_platform != target_platform]
         - {{ pin_subpackage('tensorflow-base') }}  # [build_platform != target_platform]
       host:
         - python
